# indy-ros2

./: .gitignore  IndyROSCommTask  LICENSE  README.md
indy_description/: CMakeLists.txt  package.xml
indy_description/launch/: indy_display.launch.py
indy_description/meshes/indy12/stl/: Indy12_0.stl
indy_description/meshes/indy12_v2/stl/: Indy12_v2_1.stl  Indy12_v2_3.stl  Indy12_v2_4.stl  Indy12_v2_5.stl
indy_description/rviz_config/: indy.rviz
indy_description/urdf/: four_indy.urdf.xacro  four_indy.urdf_backup.xacro  indy.ros2_control.xacro  indy.urdf.xacro  indy_common.xacro  indy_macro.xacro  indy_transmissions.xacro  materials.xacro  one_indy.urdf.xacro  two_indy.urdf.xacro
indy_description/urdf/config/: initial_positions.yaml
indy_description/urdf/config/indy12/: kinematics.yaml  physical_parameters.yaml  visual_parameters.yaml
indy_description/urdf/config/indy12_v2/: joint_limits.yaml  kinematics.yaml  physical_parameters.yaml  visual_parameters.yaml
indy_description/urdf/config/indy7/: kinematics.yaml  physical_parameters.yaml  visual_parameters.yaml
indy_description/urdf/config/indy7_v2/: joint_limits.yaml  kinematics.yaml  physical_parameters.yaml  visual_parameters.yaml
indy_description/urdf/config/indyrp2/: joint_limits.yaml  kinematics.yaml  physical_parameters.yaml  visual_parameters.yaml
indy_description/urdf/config/indyrp2_v2/: joint_limits.yaml  kinematics.yaml  physical_parameters.yaml  visual_parameters.yaml
indy_driver/: CMakeLists.txt  package.xml
indy_driver/client_wrapper/: ecat_grpc_client.py  indy_grpc_client.py
indy_driver/config/: 1robot_config.yaml  2robot_config.yaml  4robot_config_4robotOkay.yaml  4robot_config_remove_leftRP2.yaml  4robot_config_remove_rightRP2.yaml  mode_configs.yaml  sigma0.yaml  sigma1.yaml
indy_driver/controller/: indy_controllers_6dof.yaml  indy_controllers_7dof.yaml
indy_driver/gRPC/: ros_interface_pb2.py  ros_interface_pb2_grpc.py
indy_driver/gRPCServerGenPython/: EtherCATCommgRPCServer_pb2.py  EtherCATCommgRPCServer_pb2_grpc.py  IndygRPCTask_pb2.py  IndygRPCTask_pb2_grpc.py
indy_driver/indy_driver/: indy_driver.py  indy_keyboard.py  indy_keyboard_sub.py  indy_sigma.py  indy_xbox.py  mycobot_driver.py
indy_driver/indy_utils/: indy_program_maker.py  indydcp_client.py  utils_transf.py
indy_driver/launch/: indy_bringup.launch.py  indy_sigma_bringup.launch.py  mycobot_bringup.launch.py
indy_driver/nrmk_utils/: device.py  file_io.py  math_tools.py  plot.py
indy_gazebo/: CMakeLists.txt  package.xml
indy_gazebo/controller/: indy_controllers_6dof.yaml  indy_controllers_7dof.yaml
indy_gazebo/launch/: indy_gazebo.launch.py
indy_moveit/: CMakeLists.txt  package.xml
indy_moveit/indy_moveit/: launch_common.py
indy_moveit/launch/: indy_moveit_gazebo.launch.py  indy_moveit_real_robot.launch.py  indy_servo_gazebo.launch.py  indy_servo_real_robot.launch.py  moveit.launch.py  servoing.launch.py
indy_moveit/moveit_config/: controllers_6dof.yaml  controllers_7dof.yaml  four_controllers.yaml  four_kinematics.yaml  four_ompl_planning.yaml  indy_servo.yaml  kinematics.yaml  ompl_planning.yaml  one_controllers.yaml  one_kinematics.yaml  one_ompl_planning.yaml  two_controllers.yaml  two_kinematics.yaml  two_ompl_planning.yaml
indy_moveit/rviz_config/: indy_moveit.rviz  indy_servo.rviz
indy_moveit/src/: servo_joy_input.cpp  servo_keyboard_input.cpp
indy_moveit/srdf/: four_indy.srdf.xacro  indy.srdf.xacro  indy_macro.srdf.xacro  one_indy.srdf.xacro  two_indy.srdf.xacro
mycobot_280pi_custom/mycobot_280pi/: CMakeLists.txt  package.xml
mycobot_280pi_custom/mycobot_280pi/config/: workspace_params.yaml
mycobot_280pi_custom/mycobot_280pi/controller/: mycobot_controller.yaml
mycobot_280pi_custom/mycobot_280pi/launch/: mycobot_dummies.launch.py  mycobot_interface.launch.py  one_sigma_mycobot.launch.py  two_sigma_mycobot.launch.py
mycobot_280pi_custom/mycobot_280pi/mycobot_280pi/: control_node_dummy.py  mycobot_interface.py  mycobot_motion_record.py  mycobot_moveit_line.py  sigma_mycobot.py
mycobot_280pi_custom/mycobot_280pi_description/: CMakeLists.txt  package.xml
mycobot_280pi_custom/mycobot_280pi_description/launch/: one_mycobot_280pi.launch.py  two_mycobot_280pi.launch.py
mycobot_280pi_custom/mycobot_280pi_description/meshes/mycobot_280pi/: gripper_base.dae  gripper_left1.dae  gripper_left2.dae  gripper_left3.dae  gripper_right1.dae  gripper_right2.dae  gripper_right3.dae  parallel_gripper1.dae  parallel_gripper2.dae
mycobot_280pi_custom/mycobot_280pi_description/rviz_config/: mycobot_280pi.rviz
mycobot_280pi_custom/mycobot_280pi_description/urdf/: mycobot_280pi.ros2_control.xacro  mycobot_280pi.urdf.xacro  mycobot_280pi_macro.xacro  two_mycobot_280pi.urdf.xacro
mycobot_280pi_custom/mycobot_280pi_moveit/: CMakeLists.txt  package.xml
mycobot_280pi_custom/mycobot_280pi_moveit/launch/: moveit.launch.py  mycobot_280pi_moveit_launch.py  two_mycobot_280pi_moveit_launch.py  two_robot_moveit.launch.py
mycobot_280pi_custom/mycobot_280pi_moveit/moveit_config/: controllers.yaml  kinematics.yaml  ompl_planning.yaml  two_robot_controllers.yaml  two_robot_kinematics.yaml  two_robot_ompl_planning.yaml
mycobot_280pi_custom/mycobot_280pi_moveit/rviz_config/: mycobot_280pi_moveit.rviz
mycobot_280pi_custom/mycobot_280pi_moveit/src/: mycobot_planning.cpp
mycobot_280pi_custom/mycobot_280pi_moveit/srdf/: mycobot_280pi.srdf.xacro  mycobot_280pi_macro.srdf.xacro  two_mycobot_280pi.srdf.xacro  two_mycobot_280pi_macro.srdf.xacro
mycobot_280pi_custom/mycobot_280pi_utils/: control_node.py
sigma/: CMakeLists.txt  package.xml
sigma/launch/: sigma.launch.py
sigma/src/: SigmaDevice.cpp  SigmaDevice.hpp  main_master.cpp
